Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -166,15 +166,16 @@
                 <div class="project-container container-fluid px-0">
                     <div class="d-flex flex-row justify-content-between align-items-stretch flex-wrap">
                         <div class="project-card position-relative flex-fill m-1 reveal--stagger">
-                            <a class="project-link d-block h-100" href="https://james-rivera.github.io/league-champion-api-dashboard/" target="_blank" rel="noopener noreferrer">
+                            <a class="project-link d-block h-100" href="https://solesource.jamescarlo.me/" target="_blank" rel="noopener noreferrer">
                                 <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                                    <h5 class="text-white fs-3">League Champion Explorer</h5>
-                                    <p class="text-white fs-6">Live Riot API Integration</p>
+                                    <h5 class="text-white fs-3">SOLESOURCE</h5>
+                                    <p class="text-white fs-6">E-commerce storefront</p>
                                 </div>
 
-                                <div class="project-preview" data-src="https://james-rivera.github.io/league-champion-api-dashboard/" aria-hidden="true">
+                                <div class="project-preview" data-src="https://solesource.jamescarlo.me/" aria-hidden="true">
                                     <div class="preview-frame">
-                                        <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
+                                        <iframe class="preview-iframe" loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
+                                        <img class="preview-img" src="img/solesource-thumbnail.png" alt="SOLESOURCE preview" loading="lazy" />
                                         <div class="preview-overlay"></div>
                                     </div>
                                 </div>
@@ -182,13 +183,13 @@
                         </div>
 
                         <div class="project-card position-relative flex-fill m-1 reveal--stagger">
-                            <a class="project-link d-block h-100" href="https://james-rivera.github.io/tokyo-tourism-landing-page/" target="_blank" rel="noopener noreferrer">
+                            <a class="project-link d-block h-100" href="https://james-rivera.github.io/league-champion-api-dashboard/" target="_blank" rel="noopener noreferrer">
                                 <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                                    <h5 class="text-white fs-3">Japan Tours</h5>
-                                    <p class="text-white fs-6">Responsive Travel Concept</p>
+                                    <h5 class="text-white fs-3">League Champion Explorer</h5>
+                                    <p class="text-white fs-6">Live Riot API Integration</p>
                                 </div>
 
-                                <div class="project-preview" data-src="https://james-rivera.github.io/tokyo-tourism-landing-page/" aria-hidden="true">
+                                <div class="project-preview" data-src="https://james-rivera.github.io/league-champion-api-dashboard/" aria-hidden="true">
                                     <div class="preview-frame">
                                         <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
                                         <div class="preview-overlay"></div>
@@ -207,6 +208,22 @@
                                 <div class="project-preview" aria-hidden="true">
                                     <div class="preview-frame">
                                         <img src="img/dd.png" alt="Art2Cart preview" class="w-100 h-100" loading="lazy" style="object-fit: cover;" />
+                                        <div class="preview-overlay"></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="project-card position-relative flex-fill m-1 reveal--stagger">
+                            <a class="project-link d-block h-100" href="https://james-rivera.github.io/tokyo-tourism-landing-page/" target="_blank" rel="noopener noreferrer">
+                                <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                                    <h5 class="text-white fs-3">Japan Tours</h5>
+                                    <p class="text-white fs-6">Responsive Travel Concept</p>
+                                </div>
+
+                                <div class="project-preview" data-src="https://james-rivera.github.io/tokyo-tourism-landing-page/" aria-hidden="true">
+                                    <div class="preview-frame">
+                                        <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
                                         <div class="preview-overlay"></div>
                                     </div>
                                 </div>
